Default to using ConcMarkSweepGC