@@ -58,6 +58,7 @@ javaOptions in Universal ++= Seq(
     "-J-XX:MaxRAMFraction=2",
     "-J-XX:InitialRAMFraction=2",
     "-J-XX:MaxMetaspaceSize=500m",
+    "-J-XX:+UseConcMarkSweepGC",
     "-J-XX:+PrintGCDetails",
     "-J-XX:+PrintGCDateStamps",
     s"-J-Xloggc:/var/log/\${packageName.value}/gc.log"
